# digital-image-processing

./: .gitignore  README.md  open_workspace.sh
Chapter05-图像复原和重建/: Chapter05-图像退化复原处理的模型.md  Chapter5-图像复原与重建.md  example5_10.asv  example5_10.m  example5_11.asv  example5_11.m  example5_7.m
Chapter10-图像分割/: README.md  chapter10-图像分割-例题和习题.md
chapter02-基本原理/: grad.m  histgram.m  waveform.m
chapter04-频率域滤波/: README.md  chapter2_2.m  example4_1.m
code/C++/: chapter03-灰度变换与空间滤波.ipynb
code/C++/chapter03-灰度变换与空间滤波/: 3.2.3-幂律(伽马)变换.ipynb  3.3-直方图处理.ipynb  chapter03-灰度变换与空间滤波.ipynb
code/C++/chapter04-频率域滤波/: chapter04-频率域滤波.ipynb
code/C++/chapter05-图像复原与重建/: README.md  clean.sh  deconvolution.py  example_02_01  example_02_01.cc  run.sh
code/C++/chapter10-图像分割/: README.md  movingthresh.m  test.m
code/C++/chapter10-图像分割/opencv-C++/: CMakeLists.txt  ch8_ex8_2.cpp  ch8_ex8_3.cpp
code/Matlab/chapter02-基本原理/: chapter2_2.m  resize.m  waveform.m
code/Matlab/chapter05-图像复原/: pixeldup.m  (+2 more)
code/chapter03-灰度变换与空间滤波/: 3.2.3-幂律(伽马)变换.ipynb  3.3-直方图处理.ipynb
code/chapter04-频率域滤波/: Chapter04-频率域滤波.ipynb  Chapter04-频率域滤波.py  chapter04-频率域滤波.ipynb
code/chapter05-图像复原与重建/: example_02_01.cc
code/chapter10-图像分割/: movingthresh.m  test.m
note/: Chapter10-图像分割.md  Chapter2-数字图像基础.md  Chapter4-频域处理.md  README.md  chapter02-数字图像基础.md  chapter03-灰度变换与空间滤波-习题.md  chapter03-灰度变换与空间滤波-例题和习题笔记.md  chapter03-灰度变换与空间滤波.md  chapter04-频率域滤波.md  chapter10-图像分割.md  chapter11-表示和描述.md  双线性插值.md  第11章 表示和描述.md  第1章 绪论.md  第3章 灰度变换与空间滤波.md  第4章 频率域滤波.md  角点检测.md
picture/: 20141005095354734
(+1 files in other folders)
